<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/feature_header">
        <SwitchPreferenceCompat
            app:key="p_feature_en"
            app:summaryOff="@string/feature_en_summary_off"
            app:summaryOn="@string/feature_en_summary_on"
            app:title="@string/feature_en_title" />

        <SwitchPreferenceCompat
            app:key="p_widget_lock"
            app:summaryOff="@string/widget_lock_summary_off"
            app:summaryOn="@string/widget_lock_summary_on"
            app:title="@string/widget_lock_title" />

        <Preference
            app:key="p_bank_list"
            app:title="@string/bank_list_title" />

        <Preference
            app:key="p_account"
            app:title="@string/account_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/widget_header">
        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:key="p_bg_color"
            app:title="@string/bg_color_title"
            app:cpv_showAlphaSlider="true"/>
        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:key="p_font_color"
            app:title="@string/font_color_title"/>
        <SeekBarPreference
            app:key="p_font_size"
            app:title="@string/font_size_title"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/info_header">
        <Preference
            app:key="p_about"
            app:title="@string/about_title" />

        <Preference
            app:key="p_version"
            app:title="@string/version_title" />
    </PreferenceCategory>

</PreferenceScreen>